# algebraic-geometry

./: AGENT.md  Cargo.toml  README.md
src/: bezout.rs  constraint_solving.rs  elimination.rs  groebner.rs  ideal.rs  lib.rs  monomial_order.rs  polynomial.rs  variety.rs
